--- a/Assignment 3/assignment3-1.ipynb
+++ b/Assignment 3/assignment3-1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3nfFxnnHU+OAPoHdBBZzR"
+      "authorship_tag": "ABX9TyMHYijFOxw4gXHnQFXiMZ9K"
     },
     "kernelspec": {
       "name": "python3",
@@ -567,10 +567,10 @@
       ],
       "metadata": {
         "id": "WmTeyKHRkjE6",
-        "outputId": "4d6a3ebe-c495-4211-fd6e-752759c14041",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4d6a3ebe-c495-4211-fd6e-752759c14041"
       },
       "execution_count": 36,
       "outputs": [
@@ -631,10 +631,10 @@
       ],
       "metadata": {
         "id": "zU9qFOWVkjSZ",
-        "outputId": "89f257b9-b24e-4333-e630-87dfbeff1b7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "89f257b9-b24e-4333-e630-87dfbeff1b7f"
       },
       "execution_count": 37,
       "outputs": [
@@ -690,12 +690,12 @@
         "df.hist(bins=30, figsize=(10, 10)) # [1]"
       ],
       "metadata": {
-        "id": "vnHGmBL3kW3K",
-        "outputId": "781dea27-62c8-42cd-bf0a-a6ed37855b26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "vnHGmBL3kW3K",
+        "outputId": "781dea27-62c8-42cd-bf0a-a6ed37855b26"
       },
       "execution_count": 38,
       "outputs": [
@@ -761,12 +761,12 @@
         "df_loc[df_loc['LOF_Outliers']].hist(bins=30, figsize=(10, 10))"
       ],
       "metadata": {
-        "id": "GFoaR5xWmUbP",
-        "outputId": "3d70842e-7013-4ee8-c0fe-a7a89a8ba3dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 957
-        }
+        },
+        "id": "GFoaR5xWmUbP",
+        "outputId": "3d70842e-7013-4ee8-c0fe-a7a89a8ba3dc"
       },
       "execution_count": 46,
       "outputs": [
@@ -823,11 +823,11 @@
         "print(\"Baseline R2 Score:\", baseline_scores.mean())"
       ],
       "metadata": {
-        "id": "D87dRtpptxzu",
-        "outputId": "00cd0587-b38b-4fcf-eb74-e1e4e4ead9c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D87dRtpptxzu",
+        "outputId": "00cd0587-b38b-4fcf-eb74-e1e4e4ead9c2"
       },
       "execution_count": 40,
       "outputs": [
@@ -941,11 +941,11 @@
         "print(\"Both R2 Score:\", both_score)"
       ],
       "metadata": {
-        "id": "0IA8X-GMyot2",
-        "outputId": "4f9c913f-bfdb-4726-de1a-4f6ca8bcc590",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0IA8X-GMyot2",
+        "outputId": "4f9c913f-bfdb-4726-de1a-4f6ca8bcc590"
       },
       "execution_count": 48,
       "outputs": [
@@ -978,11 +978,11 @@
         "print(\"Test R2 Score:\", test_score)"
       ],
       "metadata": {
-        "id": "EWDhnO6AY1yj",
-        "outputId": "501bc635-c911-452f-9f9a-c9c9bf0c4efe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EWDhnO6AY1yj",
+        "outputId": "501bc635-c911-452f-9f9a-c9c9bf0c4efe"
       },
       "execution_count": 49,
       "outputs": [
@@ -1025,7 +1025,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In conclusion, ..."
+        "In conclusion, this assignment overviewed the steps necessary to conduct a predictive analysis. Each step from data cleaning, encoding, EDA and outliers management and feature engineering is crucial for achieving good results such as the 97% accuracy achieved in this experiement."
       ],
       "metadata": {
         "id": "xNXtUIE1BcQI"
